<resources>
    <string name="app_name">Chatter</string>
    <string name="api_key">jppqyczkb5ng</string>
    <string name="api_secrete">rp3q7q5xevnhcam26zr9amr9ss9r7u59xaxzhpmvnma9wxdh88gyfsc63wfud3m2</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="add_user_image">Add User Image</string>
    <string name="chatter_logo">Chatter Logo</string>
    <string name="log_in">Log In</string>
    <string name="haven_t_registered_yet">Haven\'t registered yet?</string>
    <string name="register_now">Register Now</string>
    <string name="log_out">Log Out</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="_01_01_2021_10_00_am">01/01/2021 10:00 AM</string>
    <string name="create_group">Create Group</string>
</resources>